--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <title>404 Page not found // FaceManBLOG</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta charset="utf-8" />
@@ -17,7 +17,7 @@
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit.">
 
-    <meta property="og:url" content="http://localhost:1313/404.html">
+    <meta property="og:url" content="https://facemanblog.faceman.cn/404.html">
   <meta property="og:site_name" content="FaceManBLOG">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit.">
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="http://localhost:1313/"><img class="app-header-avatar" src="/avatar.jpg" alt="John Doe" /></a>
+      <a href="https://facemanblog.faceman.cn/"><img class="app-header-avatar" src="/avatar.jpg" alt="John Doe" /></a>
       <span class="app-header-title">FaceManBLOG</span>
       <nav class="app-header-menu">
           <a class="app-header-menu-item" href="/">Home</a>
