--- a/fr/404.html
+++ b/fr/404.html
@@ -17,7 +17,7 @@
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="The last theme you&#39;ll ever need. Maybe.">
 
-    <meta property="og:url" content="https://hugo.faceman.cn/fr/404.html">
+    <meta property="og:url" content="https://blog.faceman.cn/fr/404.html">
   <meta property="og:site_name" content="FaceMan&#39;s Blog Fr">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="The last theme you&#39;ll ever need. Maybe.">
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="https://hugo.faceman.cn/"><img class="app-header-avatar" src="/avatar.jpg" alt="faceman" /></a>
+      <a href="https://blog.faceman.cn/"><img class="app-header-avatar" src="/avatar.jpg" alt="faceman" /></a>
       <span class="app-header-title">FaceMan&#39;s Blog Fr</span>
       <p>The last theme you&#39;ll ever need. Maybe.</p>
     </header>
