--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@
           
         </ul>
       
-      <div class="ananke-socials"><a href="https://github.com/%25!s%28%3cnil%3e%29/" target="_blank" rel="noopener"
+      <div class="ananke-socials"><a href="https://github.com/faceman0814" target="_blank" rel="noopener"
         class="ananke-social-link link-transition github link dib z-999 pt3 pt0-l mr1"
         title="follow on GitHub - Opens in a new window"
         aria-label="follow on GitHub - Opens in a new window">
@@ -130,7 +130,7 @@
 
   
   </a>
-    <div><div class="ananke-socials"><a href="https://github.com/%25!s%28%3cnil%3e%29/" target="_blank" rel="noopener"
+    <div><div class="ananke-socials"><a href="https://github.com/faceman0814" target="_blank" rel="noopener"
         class="ananke-social-link link-transition github link dib z-999 pt3 pt0-l mr1"
         title="follow on GitHub - Opens in a new window"
         aria-label="follow on GitHub - Opens in a new window">
