--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
     
 
     
-<link rel="stylesheet" href="/ananke/css/main.min.db6c21efb4e09e483e0c106d04ec594269510609667187bff9445c47d37114c9.css" >
+<link rel="stylesheet" href="/ananke/css/main.min.271fde29f9cbd44486afdc9e1ce1619124cf22553be5c1ba9d126fd09b36aa07.css" >
 
 
 
@@ -131,8 +131,7 @@
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://blog.faceman.cn/" >
-    &copy;  FaceMan's Blog 2024 
-
+    &copy;  FaceMan's Blog 2024-11-9 15:42 
   
   </a>
     <div><div class="ananke-socials"><a href="https://github.com/faceman0814" target="_blank" rel="noopener"
@@ -150,7 +149,8 @@
       <span id="sitetime">载入运行时间...</span>
     </div>
   </div>
- 
+  </div>
+  
 </footer>
 <style>
   .footer-container {
