--- a/contact/index.html
+++ b/contact/index.html
@@ -18,7 +18,7 @@
     
 
     
-<link rel="stylesheet" href="/ananke/css/main.min.db6c21efb4e09e483e0c106d04ec594269510609667187bff9445c47d37114c9.css" >
+<link rel="stylesheet" href="/ananke/css/main.min.271fde29f9cbd44486afdc9e1ce1619124cf22553be5c1ba9d126fd09b36aa07.css" >
 
 
 
@@ -44,7 +44,7 @@
 
   <meta itemprop="name" content="与我联系">
   <meta itemprop="description" content="We&#39;d love to hear from you">
-  <meta itemprop="wordCount" content="44">
+  <meta itemprop="wordCount" content="5">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="与我联系">
   <meta name="twitter:description" content="We&#39;d love to hear from you">
@@ -127,7 +127,7 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
-        <p>This is an example of a custom shortcode that you can put right into your content. You will need to add a form action to the shortcode to make it work. Check out <a href="https://formspree.io/">Formspree</a> for a simple, free form service.</p>
+        <p>如果有技术交流，或者博客指正请与我联系。</p>
 
 
 
@@ -158,8 +158,7 @@
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://blog.faceman.cn/" >
-    &copy;  FaceMan's Blog 2024 
-
+    &copy;  FaceMan's Blog 2024-11-9 15:42 
   
   </a>
     <div><div class="ananke-socials"><a href="https://github.com/faceman0814" target="_blank" rel="noopener"
@@ -177,7 +176,8 @@
       <span id="sitetime">载入运行时间...</span>
     </div>
   </div>
- 
+  </div>
+  
 </footer>
 <style>
   .footer-container {
